outputs_20260331-105410-8a3c83b2/codegen/production/build_logs/compiler_stderr.log
In file included from /tmp/tdd_build_k9ka2w2h/src/egtm_atom_adc_tmadc_multiple_channels.c:7:
/tmp/tdd_build_k9ka2w2h/include/IfxEgtm_Pwm.h:107:5: error: unknown type name ‘IfxEgtm_Pwm_FastShutoffConfig’
  107 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/tdd_build_k9ka2w2h/src/egtm_atom_adc_tmadc_multiple_channels.c: In function ‘interruptEgtmAtom’:
/tmp/tdd_build_k9ka2w2h/src/egtm_atom_adc_tmadc_multiple_channels.c:40:44: error: ‘MODULE_P03’ undeclared (first use in this function); did you mean ‘MODULE_P33’?
   40 | #define LED                               &MODULE_P03, 9u
      |                                            ^~~~~~~~~~
/tmp/tdd_build_k9ka2w2h/src/egtm_atom_adc_tmadc_multiple_channels.c:80:23: note: in expansion of macro ‘LED’
   80 |     IfxPort_togglePin(LED);
      |                       ^~~
/tmp/tdd_build_k9ka2w2h/src/egtm_atom_adc_tmadc_multiple_channels.c:40:44: note: each undeclared identifier is reported only once for each function it appears in
   40 | #define LED                               &MODULE_P03, 9u
      |                                            ^~~~~~~~~~
/tmp/tdd_build_k9ka2w2h/src/egtm_atom_adc_tmadc_multiple_channels.c:80:23: note: in expansion of macro ‘LED’
   80 |     IfxPort_togglePin(LED);
      |                       ^~~
/tmp/tdd_build_k9ka2w2h/src/egtm_atom_adc_tmadc_multiple_channels.c: In function ‘initEgtmAtom3phInv’:
/tmp/tdd_build_k9ka2w2h/src/egtm_atom_adc_tmadc_multiple_channels.c:40:44: error: ‘MODULE_P03’ undeclared (first use in this function); did you mean ‘MODULE_P33’?
   40 | #define LED                               &MODULE_P03, 9u
      |                                            ^~~~~~~~~~
/tmp/tdd_build_k9ka2w2h/src/egtm_atom_adc_tmadc_multiple_channels.c:200:30: note: in expansion of macro ‘LED’
  200 |     IfxPort_setPinModeOutput(LED, IfxPort_OutputMode_pushPull, IfxPort_OutputIdx_general);
      |                              ^~~

In file included from /tmp/tdd_build_k9ka2w2h/mocks/mock_egtm_atom_adc_tmadc_multiple_channels.c:7:
/tmp/tdd_build_k9ka2w2h/include/IfxEgtm_Pwm.h:107:5: error: unknown type name ‘IfxEgtm_Pwm_FastShutoffConfig’
  107 |     IfxEgtm_Pwm_FastShutoffConfig *fastShutOff;
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
